--------------------------------------------------------------------
TAGGED 0.7.0
--------------------------------------------------------------------

Tue Feb  1 19:58:08 CET 2005	Michael Neumann	<mneumann@ntecs.de>

	* SelectListTag (r.select_list): NON-backwards-compatible change!!!
	  If it's NOT a multiple select list, then the callback is called
	  with the choosen value (instead of an array of one element). Method
	  #selected requires a single value in the same way. No changes if it's
	  a multiple-select list!

	* minor refactoring of OgScaffolder (added support for Date type).

--------------------------------------------------------------------
TAGGED 0.6.0
--------------------------------------------------------------------

Sat Jan 29 19:06:12 CET 2005	Michael Neumann	<mneumann@ntecs.de>

	* Added ERB-templating. Example:

	    # file: ~/components/main.rb
	    class Test < Wee::Component

	      # use template '~/components/main.tpl'
	      template :render

	      # use template '~/components/main.tpl-buttons'
	      template :render_buttons
	    end

	  This allows you to use ERB-templates instead of the render_XXX
	  methods. You can also call render_XXX methods from ERB, back and
	  forth. The template file is relative to the file from which the
	  'template :symbol' call is executed. The template method optionally
	  takes the two hash-parameters :file and :property.
	   
	* Added "Pageless" mode. In pageless mode, the URL displayed in your
	  browser always looks like "/app". The session id is stored as cookie
	  and there is no page_id, hence "pageless" mode. No backtracking is
	  performed! Example:

	    require 'wee/pageless'

	    app = Wee::Utils.app_for(YourMainComponent,
	      :session => Wee::PagelessSession,
	      :application => Wee::PagelessApplication)

	    Wee::WEBrickAdaptor.
	      request_class(Wee::PagelessRequest).
	      register('/app' => app).
	      start
	