@@ -1,6 +1,6 @@
 # Implements a value holder. Useful for backtracking the reference assigned to
 # an instance variable (not the object itself!). An example where this is used
-# is the <tt>@decoration</tt> attribute of class Wee::Component.
+# is the <tt>@__decoration</tt> attribute of class Wee::Component.
 
 class Wee::ValueHolder 
   attr_accessor :value
